# Real-Time-Embedded-Audio-DSP-System-on-ESP32

./: .gitignore  README.md  host_validation  tree.txt
C_implementation/: CMakeLists.txt  band_pass.c  band_pass.h  biquad.c  config_generator.c  config_loader.c  config_loader.h  high_pass.c  high_pass.h  low_pass.c  low_pass.h  main_test.c
C_implementation/Band_Pass/: CMakeLists.txt  band_pass.c  band_pass.h
C_implementation/Cmake/: CMakeLists.txt
C_implementation/Delay/: delay.c
C_implementation/Equalizer/: equilizer.c  equilizer.h
C_implementation/Equalizer/bandPass/: band_pass.c  band_pass.h
C_implementation/Equalizer/highPass/: high_pass.c  high_pass.h
C_implementation/Equalizer/lowPass/: low_pass.c  low_pass.h
C_implementation/Global config header/: common_types.h
C_implementation/Main/: main_test.c
C_implementation/biquad/: CMakeLists.txt  biquad.c  biquad.h
C_implementation/common_types/: common_types.h
C_implementation/delay/: CMakeLists.txt  delay.c  delay.h
C_implementation/dsp_types/: dsp_types.h
C_implementation/equalizer/: CMakeLists.txt  equalizer.c  equalizer.h
C_implementation/equilizer/: equalizer.c  equalizer.h
C_implementation/gain/: CMakeLists.txt  gain.c  gain.h  gain_module.h
C_implementation/high_pass/: CMakeLists.txt  high_pass.c  high_pass.h
C_implementation/limiter/: CMakeLists.txt  limiter.c  limiter.h
C_implementation/low_pass/: CMakeLists.txt  low_pass.c  low_pass.h
C_implementation/pipeline_control/: pipeline_control.c  pipeline_control.h
C_implementation/preset/: preset.c  preset.h
UNIT TEST encryption-decryption/: CMakeLists.txt  audio_config.h  config.h  config_generator.c  config_generator.h  config_loader.c  config_loader.h  test_end_to_end.c  test_generator.c  test_loader.c
audio_hardware/: CMakeLists.txt  amp.c  amp.h  audio_congfig.h  audio_pipeline.c  audio_pipeline.h  main.c  mic.c  mic.h  ring_buffer.c  ring_buffer.h
audio_hardware/components/amp/: CMakeLists.txt  amp.c  amp.h
audio_hardware/components/audio_pipeline/: CMakeLists.txt  audio_pipeline.c  audio_pipeline.h
audio_hardware/components/common/: CMakeLists.txt  common_types.h
audio_hardware/components/main/: CMakeLists.txt  main.c
audio_hardware/components/mic/: CMakeLists.txt  mic.c  mic.h
audio_hardware/components/ring_buffer/: CMakeLists.txt  ring_buffer.c
audio_hardware/main/: CMakeLists.txt  amp.c  audio_pipeline.c  audio_pipeline.h  main.c  mic.c  ring_buffer.c
doc/: INTEGRATION_documentation.docx  Module_API_Design_Document_final.docx  SIGNOS_TECHNOLOGIES_ESP32_Audio_Processing_System.docx  SIGNOS_TECHNOLOGIES_ESP32_Hardware_Setup_Guide.docx
docs/hardware_audio/: 01_hardware_overview.md  02_system_architecture.md  03_i2s_configuration.md
docs/hardware_audio/docs/hardware_audio/: 04_dma_buffering.md
esp32_firmware/: CMakeLists.txt  Gain4.txt
esp32_firmware/Outputs/: Gain2.txt  Gain3.txt  Gain5.txt  Gain6.txt
esp32_firmware/components/amp/: CMakeLists.txt  amp.c  amp.h
esp32_firmware/components/audio_pipeline/: CMakeLists.txt  audio_pipeline.c  audio_pipeline.h
esp32_firmware/components/audio_pipline/: CMakeLists.txt  audio_pipline.c  audio_pipline.h
esp32_firmware/components/common/: audio_config.h
esp32_firmware/components/gain/: CMakeLists.txt  gain.c  gain.h  gain_module.h
esp32_firmware/components/main/: CMakeLists.txt  main.c
esp32_firmware/components/mic/: CMakeLists.txt  mic.c  mic.h
esp32_firmware/components/ring_buffer/: CMakeLists.txt  ring_buffer.c  ring_buffer.h
esp32_firmware/components/scheduler/: CMakeLists.txt  scheduler.c  scheduler.h
esp32_firmware/components/wav_data/: CMakeLists.txt  wav_data.c  wav_data.h
esp32_firmware/inc/: audio_config.h  audio_pipeline.h  mic.h  pipeline.h  switch_control.h
esp32_firmware/main/: ..c  CMakeLists.txt  main.c  ring_buffer.c  ring_buffer.h
esp32_firmware/src/: audio_pipeline.c  mic.c  pipeline.c  ring_buffer.c  switch_control.c
esp32_firmware_test/: CMakeLists.txt
esp32_firmware_test/main/: CMakeLists.txt  test_app_main.c  test_ring_buffer.c  test_ring_buffer.h
gain/: gain.c  gain_module.c
pc_app/: CMakeLists.txt  main.c
pc_app/dsp/: audio_config.h  band_pass.c  band_pass.h  biquad.c  biquad.h  common_types.h  delay.c  delay.h  dsp_types.h  equalizer.c  equalizer.h  gain.c  gain.h  high_pass.c  high_pass.h  limiter.c  limiter.h  low_pass.c  low_pass.h  pipeline_control.c  pipeline_control.h  preset.c  preset.h
reference model/: Stage 1.py  Stage 3 with audio file.py  Stage 4 with 4th order implementation.py  Stage 5 with audio.py  Stage 5.py  Stage 6.py
reference_model/: .gitkeep  Pipeline complete(mute and bypass added) 2nd order.py  Pipeline complete(mute and bypass added) 4th order.py  Stage 2 with actual audio gain.py  Stage 2.py  Stage 3.py  Stage 4 with 4th order implementation.py  Stage 4 with Audio.py  Stage 4.py  Stage 5 with audio.py  Stage 6 4th order implementation.py  Stage 6.py  Stage1.py  frequency_sweep(matlab).m  test vector generation 1 (butterworth).py  test vector generation 2 (biquad).py
tools/audio_configurator/: README.md  config.h  config_generator.c  config_loader.c
tools/rms_error/: CMakeLists.txt  main.c  rms_error.c  rms_error.h
